--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');
+/*@import url('https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&family=Noto+Serif+SC:wght@200;300;400;500;600;700;900&display=swap');*/
+/*@import url('https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap');*/
 
 .katex-html {
   overflow-x: auto;
